styles/custom.less
/* colour declarations */
@basement-orange: #f93a2b;
@basement-red: #d6009e;
@basement-blue: #039;
@basement-green: #1cce28;

/* box-shadow */
@box-shadow-top:  0px -1px 3px 0px rgba(50, 50, 50, 0.5) !important;
@box-shadow-bottom: 0px 3px 4px 0px rgba(50, 50, 50, 0.5) !important;

/* correct title margin to navbar offset */
.collection-type-index .title-desc-wrapper {
    margin-top: 90px !important;
    background:#666 !important;
    max-width:960px !important;
    margin-left: auto !important;
    margin-right: auto !important;
}

.collection-type-index .title-desc-wrapper h1 {
    margin: 1.5em;
}

/* fix navigation line height */
.main-nav ul li a span, .main-nav ul li a:visited span {
    line-height:90px;
}

/* remove default nav wrap padding */
.title-nav-wrapper {
    padding: 0 !important;
}


/*
summary-block styles
*/
.summary-title > a:link {
    font-family: 'Knockout-49', bebas neue, sans-serif !important;
    text-transform: uppercase !important;
    color: #fff;
}

.summary-title > a:visited, .summary-metadata > time {
    color: #fff;
}


h1#page-title {
    text-transform: uppercase !important;
}


/* side-wide width definitions */

.sqs-layout {
    width: 100% !important;
    margin: 0 auto !important;
}

.sqs-layout > .sqs-row {
    max-width: 960px !important;
    margin: 0 auto !important;
}

.col > .sqs-row {
    max-width:960px !important;
    margin: 0 auto !important;
}

.sqs-block-content {
    margin: 0 auto;
    max-width:960px;
}

/*
FRONT PAGE CUSTOM STYLES
*/

/* whats-on.section */

#block-yui_3_17_2_2_1435157932706_25100, #block-yui_3_17_2_2_1431400265136_26050, #block-yui_3_17_2_24_1431401661494_8621, #block-yui_3_17_2_6_1433978922996_19932, #block-yui_3_17_2_68_1431401661494_6048, #block-yui_3_17_2_2_1433901705627_28464 {
    background:@basement-blue;
    -webkit-box-shadow: @box-shadow-bottom;
    -moz-box-shadow:    @box-shadow-bottom;
    box-shadow:         @box-shadow-bottom;
    margin: 0 auto;
    max-width:100%;
}


#block-yui_3_17_2_2_1435157932706_25100 {
    -webkit-box-shadow: @box-shadow-top;
    -moz-box-shadow: @box-shadow-top;
    box-shadow: @box-shadow-top;
}

.whats-on-title h1 , #block-yui_3_17_2_6_1433978922996_19932 h2 { /*whats-on, coming soon*/
    font-family: 'Knockout-49', bebas neue, sans-serif !important;
    color:#fff !important;
}

.whats-on-title h1 { font-size:5em !important; margin-top:.7em;}

#yui_3_17_2_2_1435150511307_489.summary-item {
    background: #000 !important;
    text-align:center;
}

/* black h1s */

div#block-yui_3_17_2_2_1435111617305_10207 > .sqs-block-content h1, div#block-yui_3_17_2_3_1434320613535_31588 > .sqs-block-content h1  {
  color: #000 !important;
}


/* new whats-on summary block styles */

.whats-on {
    min-height: 500px !important;
    padding-top:3em !important;
    padding-bottom:5em !important;
    background: #0200fc !important;
}

.whats-on-wrapper {
    margin-bottom:2em;
}

.whats-on-item {
    background: #fff;
    padding-top: 10px;
    padding-left:10px;
    padding-right:10px;
    padding-bottom: 15px;
    margin: 10px;
}

.whats-on-thumb {
    max-height:414px;
}

.coming-soon {
    padding-top: 2em;
}

.coming-soon h3 {
    color:#fff;
}

#post-image {
    min-height:70px;
    width: 70px;
    float:left;
    margin-right:1em;
}

.coming-soon-row {
    padding-bottom: 40px;
    border-bottom: 1px solid #FFF;
}

.coming-soon-thumb .coming-soon-image {
    width: 80px !important;
    height: 80px !important;
}

.coming-soon-thumb .coming-soon-image img{
    width: 80px !important;
    height: 80px !important;
}

.coming-soon-thumb {
    margin: 10px;
}

.coming-soon-thumb .coming-soon-details {
    float: right;
    width: 125px;
}

.coming-soon-thumb .coming-soon-details h2 {
    margin-bottom: 0;
    font-size: 30px;
    text-transform: uppercase;
    border-top: 1px solid #FFF;
}

.coming-soon-thumb .coming-soon-details p {
    margin: 0;
    font-family: 'Knockout-47', bebas neue, sans-serif !important;
    font-size: 20px;
    text-transform: uppercase;
    border-top: 1px solid #FFF;
    border-bottom: 1px solid #FFF;
}

.coming-soon-thumb .coming-soon-details > h2 > a {
    font-family: "Knockout-47", bebas neue, sans-serif !important;
    color: #fff;
}

.coming-soon-thumb .coming-soon-details > h2, .coming-soon-thumb .coming-soon-details > p {
    color: #fff;
}


// .coming-soon-thumb > #post-image > img {
//     min-height:70px;
//     width:70px;
// }

.event-title h2 a, .event-title h2, .event-title h3 {
    font-family: 'Knockout-47', bebas neue, sans-serif !important;
    text-transform:uppercase;
    color:#0200fc;
}

.event-title h2 a, .event-title h2 {
    margin: 0;
    font-size: 35px;
}

.event-title h2,
.event-title h3 {
    border-top: 1px solid #0200fc;
}

.event-title h3 {
    margin-bottom: 0;
    font-size: 20px;
}

.event-title {
    position: absolute;
    right: 0;
    bottom: 0;
    width: 140px;
    padding: 10px;
    background-color: #FFF;
}

.front {
    position: relative;
    max-width:414px;
    max-height:310px;
    overflow:hidden;
    top: 0;
    left: 0;
}

.front img {
    max-height:310px;

}

.excerpt {
    width:inherit;
    opacity: 0;
    position: absolute;
    -webkit-transition: opacity 0.2s ease;
    -moz-transition: opacity 0.2s ease;
    -o-transition: opacity 0.2s ease;
    transition: opacity 0.2s ease;
}

.excerpt p {
    margin: 10px;
    color: #fff;
}

.front:hover .excerpt {
    opacity:1;
    background-color:rgba(0,0,0,.6);
    -webkit-transition: opacity 0.2s ease;
    -moz-transition: opacity 0.2s ease;
    -o-transition: opacity 0.2s ease;
    transition: opacity 0.2s ease;
}

